--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
 body {
   background-color: aquamarine;
+  display: grid;
+  grid-template-rows: [header] 100px [container] 1fr;
+
+  height: 100vh;
+  padding: 0;
+  margin: 0;
 }
