--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,30 @@ body {
   padding: 0;
   margin: 0;
 }
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+header nav {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+header nav button {
+  background-color: white;
+  color: black;
+
+  padding: 15px 30px;
+  border: 1px solid gray;
+  border-bottom: none;
+  border-radius: 15px 15px 0 0;
+}
+
+#content {
+  border-top: 2px solid black;
+  background-color: white;
+}
