--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,21 @@
+:root {
+  font-size: 24px;
+  font-family: sans-serif;
+}
+
 body {
-  background-color: aquamarine;
+  background-color: gold;
   display: grid;
   grid-template-rows: [header] 100px [container] 1fr;
 
   height: 100vh;
   padding: 0;
   margin: 0;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -31,6 +41,31 @@ header nav button {
 }
 
 #content {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+
   border-top: 2px solid black;
   background-color: white;
+
+  padding: 5%;
+}
+
+.content-box {
+  background: radial-gradient(ellipse closest-side, gold 20%, white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1,
+h2,
+p {
+  padding: 0;
+  margin: 0;
+}
+
+button {
+  font-size: 0.8rem;
+  font-family: sans-serif;
 }
