--- a/src/style.css
+++ b/src/style.css
@@ -1,23 +1,19 @@
 :root {
   --primary: #c4a982;
-  --accent: #d44723;
+  --secondary: #e4a041;
+  --accent: #002366;
   font-size: 24px;
   font-family: sans-serif;
 }
 
 body {
-  background-color: var(--primary);
+  background-color: var(--accent);
   display: grid;
   grid-template-rows: [header] 100px [container] 1fr;
 
   height: 100vh;
   padding: 0;
   margin: 0;
-}
-
-.flex-column {
-  display: flex;
-  flex-direction: column;
 }
 
 header {
@@ -44,18 +40,35 @@ header {
 #content {
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 0.75rem;
 
   border-top: 2px solid black;
-  background-color: white;
+  background-color: var(--primary);
 
-  padding: 5%;
+  padding: min(5%, 10rem);
 }
 
 .content-box {
   display: flex;
-  justify-content: center;
-  align-items: center;
+
+  background-color: var(--secondary);
+  border: 0.1rem solid var(--accent);
+
+  &.flex-row {
+    flex-direction: row;
+  }
+
+  &.flex-column {
+    flex-direction: column;
+  }
+
+  &.justify-center {
+    justify-content: center;
+  }
+
+  &.align-center {
+    align-items: center;
+  }
 }
 
 h1,
@@ -68,4 +81,10 @@ p {
 button {
   font-size: 0.8rem;
   font-family: sans-serif;
+}
+
+img {
+  height: 20rem;
+  width: 20rem;
+  border: 0.1rem solid var(--accent);
 }
