--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@ header {
   border-top: 2px solid black;
   background-color: var(--primary);
 
-  padding: min(5%, 10rem);
+  padding: 50px min(10%, 10rem);
 }
 
 .content-box {
@@ -61,6 +61,8 @@ header {
 
   background-color: var(--secondary);
   border: 0.1rem solid var(--accent);
+  padding: 30px 15%;
+  gap: 20px;
 
   &.flex-row {
     flex-direction: row;
@@ -81,6 +83,7 @@ header {
 
 .menu-card {
   display: flex;
+  gap: 10%;
 
   &.flex-row {
     flex-direction: row;
@@ -112,7 +115,7 @@ button {
 }
 
 img {
-  height: 20rem;
-  width: 20rem;
+  height: 12rem;
+  width: 12rem;
   border: 0.1rem solid var(--accent);
 }
